--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <img src="project2.png" alt="Project 2">
         <h3>Project 2</h3>
         <p>Project description goes here.</p>
-        <a href="#" class="btn">View Project</a>
+        <a href="https://sadhotra.github.io/deepakproject/" class="btn">View Project</a>
       </div>
     </div>
   </section>
