--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     <h2>My Projects</h2>
     <div class="project-grid">
       <div class="project-item">
-        <img src="project1.png" alt="Project 1">
+        <img src="project3.jpg" alt="Project 1">
         <h3>Project 1</h3>
         <p>Project description goes here.</p>
-        <a href="#" class="btn">View Project</a>
+        <a href="https://deepak3033.github.io/project2/" class="btn">View Project</a>
       </div>
       <div class="project-item">
         <img src="project2.png" alt="Project 2">
